objects/Campaign__c.object
<CustomObject>
    <label>Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0: Being edited</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11: Targeting pending</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12: Counting in progress</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13: Arbitration in progress</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15: Target ready</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>21: Personalization pending</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22: Personalization in progress</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25: Message finalized</label>
                </value>
                <value>
                    <fullName>37</fullName>
                    <label>37: Personalization or count failed</label>
                </value>
                <value>
                    <fullName>45</fullName>
                    <label>45: Ready to be delivered</label>
                </value>
                <value>
                    <fullName>51</fullName>
                    <label>51: Start pending</label>
                </value>
                <value>
                    <fullName>55</fullName>
                    <label>55: In progress</label>
                </value>
                <value>
                    <fullName>61</fullName>
                    <label>61: Retry pending</label>
                </value>
                <value>
                    <fullName>62</fullName>
                    <label>62: Retry in progress</label>
                </value>
                <value>
                    <fullName>71</fullName>
                    <label>71: Pause requested</label>
                </value>
                <value>
                    <fullName>72</fullName>
                    <label>72: Pause in progress</label>
                </value>
                <value>
                    <fullName>75</fullName>
                    <label>75: Paused</label>
                </value>
                <value>
                    <fullName>81</fullName>
                    <label>81: Stop requested</label>
                </value>
                <value>
                    <fullName>82</fullName>
                    <label>82: Stop in progress</label>
                </value>
                <value>
                    <fullName>85</fullName>
                    <label>85: Stopped</label>
                </value>
                <value>
                    <fullName>87</fullName>
                    <label>87: Failed</label>
                </value>
                <value>
                    <fullName>95</fullName>
                    <label>95: Finished</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100: Deleted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Sub-purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-launch Discovery</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>1 to 1 Services</fullName>
                </value>
                <value>
                    <fullName>Masterclasses</fullName>
                </value>
                <value>
                    <fullName>Status upgrade opportunity</fullName>
                </value>
                <value>
                    <fullName>Product Novelties</fullName>
                </value>
                <value>
                    <fullName>Exclusive Offers</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Birthday High Spenders</fullName>
                </value>
                <value>
                    <fullName>Birthday Mid Spenders</fullName>
                </value>
                <value>
                    <fullName>Personal greetings</fullName>
                </value>
                <value>
                    <fullName>Seasonal greetings</fullName>
                </value>
                <value>
                    <fullName>Gift availability on counter</fullName>
                </value>
                <value>
                    <fullName>New magazine</fullName>
                </value>
                <value>
                    <fullName>1st Premium skincare purchase</fullName>
                </value>
                <value>
                    <fullName>1st Icons purchase</fullName>
                </value>
                <value>
                    <fullName>New with high potential</fullName>
                </value>
                <value>
                    <fullName>Premium skincare post-sampling</fullName>
                </value>
                <value>
                    <fullName>Premium Skincare Replenishment</fullName>
                </value>
                <value>
                    <fullName>Foundation Replenishment</fullName>
                </value>
                <value>
                    <fullName>Other replenishment</fullName>
                </value>
                <value>
                    <fullName>Anti-churn High Spenders</fullName>
                </value>
                <value>
                    <fullName>Anti-churn Mid Spenders</fullName>
                </value>
                <value>
                    <fullName>Status expiry</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction</fullName>
                </value>
                <value>
                    <fullName>Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>One-to-one services</fullName>
                </value>
                <value>
                    <fullName>Skincare Replenishment</fullName>
                </value>
                <value>
                    <fullName>2nd purchase reminder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channels__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>Image URL</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Type__c</fullName>
        <label>List Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Tactical</fullName>
                </value>
                <value>
                    <fullName>Tactical Manager</fullName>
                </value>
                <value>
                    <fullName>Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Use Case</fullName>
                </value>
                <value>
                    <fullName>Dissatisfaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Icon_Image__c</fullName>
        <label>Icon Image</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPI_Optout__c</fullName>
        <label>Optout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_code__c</fullName>
        <label>Promo code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_ID__c</fullName>
        <externalId>true</externalId>
        <label>Delivery ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used as a fall back description only when no translated key is found in the translation module</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <formula>IF(OwnerId = $User.Id &amp;&amp;  ISPICKVAL(List_Type__c, &quot;Tactical Manager&quot;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Success__c</fullName>
        <label>Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_date__c</fullName>
        <inlineHelpText>(Sending date)</inlineHelpText>
        <label>Contact date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <defaultValue>&quot;#12191F&quot;</defaultValue>
        <label>Background Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Purpose__c</fullName>
        <label>Campaign Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INV</fullName>
                    <label>Invitation</label>
                </value>
                <value>
                    <fullName>COU</fullName>
                    <label>Courtesy</label>
                </value>
                <value>
                    <fullName>SAT</fullName>
                    <label>Satisfaction</label>
                </value>
                <value>
                    <fullName>REP</fullName>
                    <label>Replenishment</label>
                </value>
                <value>
                    <fullName>ANT</fullName>
                    <label>Anti-churn</label>
                </value>
                <value>
                    <fullName>EXP</fullName>
                    <label>DSM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clienteling_Name__c</fullName>
        <label>Clienteling Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatic_Campaign__c</fullName>
        <label>Automatic Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>anniversaire</fullName>
                </value>
                <value>
                    <fullName>antiChurn</fullName>
                </value>
                <value>
                    <fullName>refill</fullName>
                </value>
                <value>
                    <fullName>satisfaction</fullName>
                </value>
                <value>
                    <fullName>welcomeClient</fullName>
                </value>
                <value>
                    <fullName>welcomeProspect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPI_Distinct_opens__c</fullName>
        <label>Distinct opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_Members_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are Members Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Percentage__c</fullName>
        <label>Creation Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KPI_Distinct_clicks__c</fullName>
        <label>Distinct clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommunicationChannel__c</fullName>
        <label>Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>External target</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Direct Mail</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Landling phone</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Mobile (SMS/MMS)</label>
                </value>
                <value>
                    <fullName>106</fullName>
                    <label>Mobile E-Mail</label>
                </value>
                <value>
                    <fullName>108</fullName>
                    <label>Mobile phone</label>
                </value>
                <value>
                    <fullName>109</fullName>
                    <label>Office phone</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>Global phone</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>Line</label>
                </value>
                <value>
                    <fullName>112</fullName>
                    <label>WeChat</label>
                </value>
                <value>
                    <fullName>113</fullName>
                    <label>Clienteling</label>
                </value>
                <value>
                    <fullName>103</fullName>
                    <label>Clienteling CS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Internal_Name__c</fullName>
        <externalId>true</externalId>
        <label>Delivery Internal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Message_to_deliver__c</fullName>
        <label>Message to deliver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Total_count_of_opens__c</fullName>
        <label>Total count of opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Total_number_of_clicks__c</fullName>
        <label>Total number of clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_to_Update_or_Delete__c</fullName>
        <inlineHelpText>U for Update; D for Delete</inlineHelpText>
        <label>Delivery to Update or Delete</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>